--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,10 @@ menu:
   #   url:               /resume/
   - title:             Documentation
     url:               /docs/
-  - title: On GitHub
-    url: https://github.com/agkozak/zcomet
+  - title:             On GitHub
+    url:               https://github.com/agkozak/zcomet
+  - title:             Contact
+    url:               /contact/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
